# DelFolderAndFile

./: CMakeLists.txt  README.md  data.txt  delHiddenFiles.c  main.c
delHiddenFiles/: CMakeLists.txt  delHiddenFiles.h
dstring/: CMakeLists.txt  dstring.c  dstring.h
